# Fennec

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs
.github/workflows/: build.yml  release.yml
scripts/: push_to_es.py  requirments.txt
src/: main.rs
src/lib/: errors.rs  mod.rs  modifiers.rs  traits.rs  upload.rs
