[package]
name = "fennec"
version = "0.3.2"
edition = "2021"
homepage = "https://github.com/AbdulRhmanAlfaifi/Fennec"
repository = "https://github.com/AbdulRhmanAlfaifi/Fennec"
authors = ["AbdulRhman Alfaifi <@A__ALFAIFI>"]
license = "MIT OR Apache-2.0"
keywords = ["DFIR", "artifacts", "forensics", "collector", "*nix"]

[lib]
name = "fennec"
path = "src/lib/mod.rs"

[dependencies]
serde_yaml = "0.8.24"
serde_json = {version = "1.0.81",  features = ["preserve_order"]}
serde = { version = "1.0.137", features = ["derive"]}
osquery-rs = "0.1.2"
log4rs = "1.1.1"
log = "0.4.17"
glob = "0.3.0"
regex = "1.5.6"
chrono = "0.4.19"
zip = { version = "0.6.2", default-features = false, features = ["deflate", "time"] }
csv = "1.1.6"
flate2 = "1.0.24"
hostname = "0.3.1"
clap = "3.2.8"
rust-embed = { version = "6.4.0", features = ["compression", "include-exclude"]}
nix = "0.24.1"
colored = "2.0.0"
aws-creds = { default-features = false , version = "0.29.1", features = ["rustls-tls"] }
rust-s3 = { default-features = false , version = "0.31.0", features = ["sync-rustls-tls"] }